sterlang/examples/err-syntax/e37_erlt.erlt.err.exp
-- ERROR ------------------------------- examples/err-syntax/e37_erlt.erlt:24:37
Parse Error
 24| update_map(Map, Key, Value) -> Map#(Key = Value).
...|                                     ^
