sterlang/examples/err-syntax/e37_erlt.erlt
%% Copyright (c) Facebook, Inc. and its affiliates.
%%
%% Licensed under the Apache License, Version 2.0 (the "License");
%% you may not use this file except in compliance with the License.
%% You may obtain a copy of the License at
%%
%%     http://www.apache.org/licenses/LICENSE-2.0
%%
%% Unless required by applicable law or agreed to in writing, software
%% distributed under the License is distributed on an "AS IS" BASIS,
%% WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
%% See the License for the specific language governing permissions and
%% limitations under the License.

-module(e37_erlt).

-export([update_map/2, update_map/3]).

%% OK - the key is an atom
update_map(Map, Value) -> Map#(key = Value).

%% Not OK - the key is not an atom
update_map(Map, Key, Value) -> Map#(Key = Value).
